[FD-623] Fixed paperclip crop and css alignment for images in order to fit the context container

--- a/app/assets/stylesheets/blocks/_cta-cover.scss
+++ b/app/assets/stylesheets/blocks/_cta-cover.scss
@@ -28,7 +28,7 @@
 .cta-cover__thumbnail {
   width: 100%; 
   position: absolute; 
-  top: 0; 
+  top: -8px; 
   left: 0;
 }
 
